--- a/newcontacts.html
+++ b/newcontacts.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Cадочок Посмішка</title>
+  <head>
+    <title>Cадочок Посмішка</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Домашній християнський садочок Посмішка"><!-- данный тег необходим для поисковой оптимизации сайта. Он сообщает поисковым машинам о содержании страницы. Одной из лучших SEO-практик является создание и применение данного тега-->
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/newcontacts.css" rel="stylesheet" media="screen"> 
-	</head>
-	<body>
-		<div class="wrapper">
-			<header class="header">
-   				<div class="container">
-   					<div class="row">
-   						<div class="col-sm-7">
-<!--Головний напис--><!--Головний напис-->
-                    	<h1 class="text-left">Домашній xристиянський</h1>
-                    	<h1 class="txt_napus2">садочок</h1>
-                    	<h1 class="txt_napus1"><strong>Посмішка</strong></h1>
-                  	</div>                  
-                  	<div class="col-sm-5">
-<!--Контакти--><!--Контакти-->
-                    	<address>
-                      		<abbr title="Phone">
-                        		<span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-                      		</abbr> (093) 839-7139 -Еріка
-                    	</address>
-                    	<address>
-                      	<a href="mailto:#">erika.ucu@gmail.com</a>
-                    	</address>
-                 	 </div>
-               </div>
-              </div>            
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+         <div class="container">
+          <div class="row">
+            <div class="col-sm-7">
+<!--Головний напис-->
+              <h1 class="text-left">Домашній xристиянський</h1>
+              <h1 class="txt_napus2">садочок</h1>
+              <h1 class="txt_napus1"><strong>Посмішка</strong></h1>
+            </div>                  
+            <div class="col-sm-5">
+<!--Контакти-->
+              <address>
+                <abbr title="Phone">
+                  <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+                </abbr> (093) 839-7139 -Еріка
+              </address>
+              <address>
+                <a href="mailto:#">erika.ucu@gmail.com</a>
+              </address>
             </div>
-<!--nav--><!--nav--><!--nav-->          
-   			<nav>
-   				<div class="container">
-   					<div class="row">
-   						<div class="col-sm-12">
-   							<ul class="main-menu">
-	<li ><a href="#">
-		<strong>Головна</strong></a></li>
-	<li><a href="#">
-		<strong>Про нас</strong></a></li>
-	<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		<strong>Програми</strong>
-		<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li ><a href="#">Підготовка до школи</a></li>
-                  <li><a href="#">Англійська та іспанська з іноземцями</a></li>
-                </ul></li>
-    <li><a href="#"><strong>Наші вчителі</strong></a></li>
-    <li class="active"><a href=""><strong>Контакти</strong></a></li>
-              				</ul>
-              			</div>
-              		</div>
-              	</div> 
+          </div>
+        </div>            
+      </div>
+<!--nav-->        
+      <nav>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <ul class="main-menu">
+                <li ><a href="#"><strong>Головна</strong></a>
+                </li>
+                <li><a href="#"><strong>Про нас</strong></a>
+                </li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Програми</strong><b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li ><a href="#">Підготовка до школи</a>
+                    </li>
+                    <li><a href="#">Англійська та іспанська з іноземцями</a>
+                    </li>
+                  </ul>
+                </li>
+                <li><a href="#"><strong>Наші вчителі</strong></a>
+                </li>
+                <li class="active"><a href=""><strong>Контакти</strong></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div> 
 <!-- Щоб створилась кнопка замість меню
 
         <div class="btn-group">
@@ -70,43 +73,52 @@
        <li><a href="#">Контакти</a></li>
   </ul>
 </div>  -->
-			</nav>
-
-			<div class="middle">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-6">
-						</div><!--col-sm-6-->
-						<div class="col-sm-6">
-						</div><!--col-sm-6-->
-					</div><!--row-->
-				</div><!--container-->
-			</div><!--middle-->
-			<footer class="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-4">
-							<address><strong>Львів</strong>
-							<br>Пл. Григоренка 5/17
-							<br>9.30-15.30
-							</address>
-						</div><!--col-sm-4-->
-						<div class="col-sm-4">
-							<address>
-							<strong>(093)8397139</strong>
-							<br><a href="mailto:#">erika.ucu@gmail.com</a>
-							</address>
-						</div><!--col-sm-4-->
-						<div class="col-sm-4">
-							<address>
-							<strong>Винники</strong>
-							<br>вул. Винна гора 14/3
-							<br>10.00-18.00
-							</address>
-						</div><!--col-sm-4-->
-					</div><!--row-->
-				</div><!--container-->
-			</footer><!-- .footer -->
-		</div> <!--wrapper-->  
-	</body>
+      </nav>
+<!--middle--> 
+      <div class="middle">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d643.2553894186412!2d24.022809018286463!3d49.842052457920666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add73cfe7ffdb%3A0xf68a0ac01c2b8178!2z0LLRg9C70LjRhtGPINCQ0LrQsNC00LXQvNGW0LrQsCDQk9C90LDRgtGO0LrQsCwgMjYsINCb0YzQstGW0LIsINCb0YzQstGW0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjA!5e0!3m2!1sru!2sua!4v1488103521547" width="550" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div><!--col-sm-6-->
+            <div class="col-sm-6">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2574.0220941214093!2d24.138329514986314!3d49.8232499402395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ac25dd7d90a03%3A0x88bbdfb7dd16d5a8!2z0LLRg9C70LjRhtGPINCS0LjQvdC90LAg0JPQvtGA0LAsIDEyLCDQktC40L3QvdC40LrQuCwg0JvRjNCy0ZbQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCA3OTQ5NQ!5e0!3m2!1sru!2sua!4v1488103602373" width="550" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div><!--col-sm-6-->
+          </div><!--row-->
+        </div><!--container-->
+        <div class="conteiner">
+          <div class="row">
+            <div class="col-sm-12">
+              <h1>Форма зв'язку</h1>
+            </div>
+          </div>
+        </div>
+      </div><!--middle-->
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <address><strong>Львів</strong>
+              <br>Пл. Григоренка 5/17
+              <br>9.30-15.30
+              </address>
+            </div><!--col-sm-4-->
+            <div class="col-sm-4">
+              <address>
+              <strong>(093)8397139</strong>
+              <br><a href="mailto:#">erika.ucu@gmail.com</a>
+              </address>
+            </div><!--col-sm-4-->
+            <div class="col-sm-4">
+              <address>
+              <strong>Винники</strong>
+              <br>вул. Винна гора 14/3
+              <br>10.00-18.00
+              </address>
+            </div><!--col-sm-4-->
+          </div><!--row-->
+        </div><!--container-->
+      </footer><!--footer -->
+    </div> <!--wrapper-->  
+  </body>
 </html>
