Add delay before transition

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </ul> 
                   </div><!--col-sm-4-->
                   <div class="col-sm-4 ">
-                    <img src="./images2/why.png"onload="this.style.left='78px'">
+                    <img src="./images2/why.png"onload="var that=this;setTimeout(function(){that.style.left='78px'},1000)">
                   </div> <!--col-sm-4-->
                 </div><!--row-->
               </div><!--container-->
