виправлені кольори і додані оновлені малюнки

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Cадочок Посмішка</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Домашній християнський садочок Посмішка"><!-- данный тег необходим для поисковой оптимизации сайта. Он сообщает поисковым машинам о содержании страницы. Одной из лучших SEO-практик является создание и применение данного тега-->
+    <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/new.css" rel="stylesheet" media="screen"> 
@@ -130,7 +130,7 @@
                     </ul> 
                   </div><!--col-sm-4-->
                   <div class="col-sm-4 ">
-                    <img src="./images2/why.png"onload="var that=this;setTimeout(function(){that.style.left='78px'},1000)">
+                    <img src="./images2/why_animals.png"onload="var that=this;setTimeout(function(){that.style.left='45px'},1000)">
                   </div> <!--col-sm-4-->
                 </div><!--row-->
               </div><!--container-->
