--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
           <div class="row">
             <div class="col-sm-12">
               <ul class="main-menu">
-                <li class="active"><a href="#">
+                <li class="active"><a href="./index.html">
                   <strong>Головна</strong></a>
                 </li>
-                <li><a href="#">
+                <li><a href="./newabuot.html">
                   <strong>Про нас</strong></a>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -55,10 +55,10 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="#">
+                  <li><a href="./newstaff.html">
                     <strong>Наші вчителі</strong></a>
                   </li>
-                  <li><a href="">
+                  <li><a href="./newcontacts.html">
                     <strong>Контакти</strong></a>
                   </li>
                 </ul>
@@ -79,6 +79,7 @@
        <li><a href="#">Контакти</a></li>
   </ul>
 </div>  -->
+
       </nav>
 <!--middle-->       
       <div class="middle">
