--- a/newstaff.html
+++ b/newstaff.html
@@ -3,59 +3,68 @@
   <head>
     <title>Cадочок Посмішка</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Домашній християнський садочок Посмішка"><!-- данный тег необходим для поисковой оптимизации сайта. Он сообщает поисковым машинам о содержании страницы. Одной из лучших SEO-практик является создание и применение данного тега-->
+    <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/newstaff.css" rel="stylesheet" media="screen"> 
-   </head>
-   <body>
+  </head>
+  <body>
     <div class="wrapper">
       <header class="header">
           <div class="container">
             <div class="row">
               <div class="col-sm-7">
-<!--Головний напис--><!--Головний напис-->
-                      <h1 class="text-left">Домашній xристиянський</h1>
-                      <h1 class="txt_napus2">садочок</h1>
-                      <h1 class="txt_napus1"><strong>Посмішка</strong></h1>
-                    </div>                  
-                    <div class="col-sm-5">
-<!--Контакти--><!--Контакти-->
-                      <address>
-                          <abbr title="Phone">
-                            <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-                          </abbr> (093) 839-7139 -Еріка
-                      </address>
-                      <address>
-                        <a href="mailto:#">erika.ucu@gmail.com</a>
-                      </address>
-                   </div>
-               </div>
-              </div>            
+<!--Головний напис-->
+                <h1 class="text-left">Домашній xристиянський</h1>
+                <h1 class="txt_napus2">садочок</h1>
+                <h1 class="txt_napus1"><strong>Посмішка</strong></h1>
+              </div>                  
+            <div class="col-sm-5">
+<!--Контакти-->
+              <address>
+                <abbr title="Phone">
+                  <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+                </abbr> (093) 839-7139 -Еріка
+              </address>
+              <address>
+                <a href="mailto:#">erika.ucu@gmail.com</a>
+              </address>
             </div>
-<!--nav--><!--nav--><!--nav-->          
-        <nav>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12">
-                <ul class="main-menu">
-  <li ><a href="#">
-    <strong>Головна</strong></a></li>
-  <li><a href="#">
-    <strong>Про нас</strong></a></li>
-  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
-    <strong>Програми</strong>
-    <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li ><a href="#">Підготовка до школи</a></li>
-                  <li><a href="#">Англійська та іспанська з іноземцями</a></li>
-                </ul></li>
-    <li class="active"><a href="#"><strong>Наші вчителі</strong></a></li>
-    <li><a href=""><strong>Контакти</strong></a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div> 
+          </div>
+        </div>            
+      </div>
+<!--nav-->          
+      <nav>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <ul class="main-menu">
+                <li ><a href="./index.html">
+                  <strong>Головна</strong></a>
+                </li>
+                <li><a href="./newabuot.html">
+                  <strong>Про нас</strong></a>
+                </li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <strong>Програми</strong>
+                  <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li ><a href="#">Підготовка до школи</a>
+                    </li>
+                    <li><a href="#">Англійська та іспанська з іноземцями</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="active">
+                  <a href="./newstaff.html"><strong>Наші вчителі</strong></a>
+                </li>
+                <li><a href="./newcontacts.html">
+                  <strong>Контакти</strong></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div> 
 <!-- Щоб створилась кнопка замість меню
 
         <div class="btn-group">
@@ -77,7 +86,7 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="thumbnail">
-<img src="./images2/Erika.png" class="img-rounded">
+                <img src="./images2/Erika.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Еріка Татчин</h3>
                   <p>
@@ -88,7 +97,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem 
             </div><!--col-sm-4-->
             <div class="col-sm-4">
               <div class="thumbnail">
-<img src="./images2/natalia.png" class="img-rounded">
+                <img src="./images2/natalia.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Наталя Лозак</h3>
                   <p>
@@ -99,7 +108,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem 
             </div><!--col-sm-4-->
             <div class="col-sm-4">  
               <div class="thumbnail">
-<img src="./images2/duvan.png" class="img-rounded">
+                <img src="./images2/duvan.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Duvan Vargas</h3>
                   <p>
@@ -114,7 +123,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem 
           <div class="row">
             <div class="col-sm-4">
               <div class="thumbnail">
-<img src="./images2/joe.png" class="img-rounded">
+                <img src="./images2/joe.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Joe Marasek</h3>
                   <p>
@@ -125,7 +134,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem 
             </div><!--col-sm-4-->
             <div class="col-sm-4">
               <div class="thumbnail">
-<img src="./images2/lesia.png" class="img-rounded">
+                <img src="./images2/lesia.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Леся Городиловська</h3>
                   <p>
@@ -136,7 +145,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem 
             </div><!--col-sm-4-->
             <div class="col-sm-4">
               <div class="thumbnail">
-<img src="./images2/svit.png" class="img-rounded">
+                <img src="./images2/svit.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Світлана Кір'янова</h3>
                   <p>
