--- a/newprograms.html
+++ b/newprograms.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Домашній християнський садочок Посмішка">
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link href="css/newprograms.css" rel="stylesheet" media="screen"> 
+  <link href="css/newprograms.css
+  " rel="stylesheet" media="screen"> 
   </head>
   <body>
     <div class="wrapper">
@@ -82,8 +83,26 @@
 
       </nav>
 <!--middle-->       
-      <div class="middle"></div><!--middle--> 
-      
+      <div class="middle">
+        <div class="conteiner blok">
+          <div class="row">
+            <div class="col-xs-12 col-md-4 preschool">
+              <h2 class="text-center">Дитячий <br>садочок</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam lacus, vehicula vitae mattis ut, tristique at nisi. Mauris id sagittis tellus, id ornare enim. blandit, ac mollis velit interdum. Aliquam congue, turpis at mattis commodo, est sem scelerisque nisi, a mattis diam nisl eget quam.</p>
+            </div><!--col-md-4-->
+            <div class="col-xs-12 col-md-4 adication">
+              <h2 class="text-center">Підготовка<br> до школи</h2>
+              <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce leo orci, tristique eget dignissim ut, porttitor eu mauris. Praesent pulvinar justo lectus, ac porttitor turpis imperdiet quis. Nunc malesuada sapien congue mattis maximus. Praesent vehicula tortor at mauris </p>
+            </div><!--col-md-4-->
+            <div class="col-xs-12 col-md-4 camp">
+              <h2 class="text-center">Літній<br> табір</h2>
+              <p>Integer vel euismod velit. Integer tempus tortor quis accumsan suscipit. Phasellus convallis mauris sodales nibh rhoncus, a lacinia elit congue. Donec ut interdum ligula, quis vestibulum arcu. Proin iaculis bibendum eros ut auctor. Sed facilisis enim in risus lacinia, et sollicitudin ante sollicitudin. Nam sed tellus ac nisl vehicula bibendum dapibus ut metus. </p>
+            </div><!--col-md-4-->
+          </div><!-row-->
+        </div><!--conteiner-->
+
+      </div><!--middle--> 
+
       <footer class="footer">
         <div class="container">
           <div class="row">
