--- a/newprograms.html
+++ b/newprograms.html
@@ -87,19 +87,82 @@
         <div class="conteiner blok">
           <div class="row">
             <div class="col-xs-12 col-md-4 preschool">
-              <h2 class="text-center">Дитячий <br>садочок</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam lacus, vehicula vitae mattis ut, tristique at nisi. Mauris id sagittis tellus, id ornare enim. blandit, ac mollis velit interdum. Aliquam congue, turpis at mattis commodo, est sem scelerisque nisi, a mattis diam nisl eget quam.</p>
+              <h2>Дитячий <br>садочок</h2>
+              <p>У нашому навчанні ми використовуємо лише ігрові методики (анімовані біблійні історії, пісеньки, віршики, сюжетно-рольові ігри, творчі елементи, руханки). Завдяки тому, що наші уроки - це весела, цікава і, головне, різноманітна гра, Вашим діткам не буде нудно! А ще ми читаємо багато книжочок))</p>
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 adication">
-              <h2 class="text-center">Підготовка<br> до школи</h2>
+              <h2>Підготовка<br> до школи</h2>
               <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce leo orci, tristique eget dignissim ut, porttitor eu mauris. Praesent pulvinar justo lectus, ac porttitor turpis imperdiet quis. Nunc malesuada sapien congue mattis maximus. Praesent vehicula tortor at mauris </p>
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 camp">
-              <h2 class="text-center">Літній<br> табір</h2>
-              <p>Integer vel euismod velit. Integer tempus tortor quis accumsan suscipit. Phasellus convallis mauris sodales nibh rhoncus, a lacinia elit congue. Donec ut interdum ligula, quis vestibulum arcu. Proin iaculis bibendum eros ut auctor. Sed facilisis enim in risus lacinia, et sollicitudin ante sollicitudin. Nam sed tellus ac nisl vehicula bibendum dapibus ut metus. </p>
+              <h2>Літній<br> табір</h2>
+              <p>Integer vel euismod velit. Integer tempus tortor quis accumsan suscipit. Phasellus convallis mauris sodales nibh rhoncus, a lacinia elit congue. Donec ut interdum ligula, quis vestibulum arcu. Proin iaculis bibendum eros ut auctor. Sed facilisis enim in risus lacinia, et sollicitudin ante sollicitudin. sdvfsdgd</p>
             </div><!--col-md-4-->
           </div><!-row-->
         </div><!--conteiner-->
+        <div class="container programs">
+          <div class="row">
+            <h1><strong>Спеціальні програми</strong></h1>
+            <div class="col-xs-12 col-sm-2">
+              <img src="./images2/english1.jpg">
+            </div>
+            <div class="col-sm-4 english">
+              <h4>Вивчення Англійської мови</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
+            </div>
+            <div class="col-xs-12 col-sm-2">
+              <img src="./images2/spanish1.jpg">
+            </div>
+            <div class="col-sm-4 spanish">
+              <h4>Вивчення Іспанської мови</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
+            </div>
+          </div>
+        </div>
+         <div class="container prog">
+          <div class="row">
+            <div class="col-xs-12 col-sm-2">
+              <img src="./images2/english4.jpg">
+            </div>
+            <div class="col-sm-4 english">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
+            </div>
+            <div class="col-xs-12 col-sm-2">
+              <img src="./images2/english3.jpg">
+            </div>
+            <div class="col-sm-4 spanish">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
+             </div>
+          </div>
+        </div>
+        <div class="conteiner addschool">
+          <div class="row">
+            <div class="col-sm-12">
+              <h2>Підготовка до школи</h2>
+            </div>
+          </div>
+        </div>
+        <div class="conteiner addschool">
+          <div class="row">
+            <div class="col-sm-6">
+              <h4>Для кого?</h4>
+              <p>Вступ до школи є якісно новим етапом у житті дитини. Щоб допомогти вашим діткам впоратись із цим завданням, запрошуємо діток віком 5-6 років у Посмішку на підготовку.Завдання курсу: адаптація дітей до школи та навчального процесу; навчання основ читання, письма, математики; розвиток пам'яті, уваги, мислення; вивчення англійської мови. Усі заняття будовані в цікавій ігровій формі. </p>
+            </div>
+            <div class="col-sm-6">
+              <h4>Що вивчаємо?</h4>
+              <p> На занятях особливу увагу приділяємо:<br>
+-розвитоку пам'яті, уваги, уяви, мислення;<br>
+-навичкам писання (розвиток дрібної моторики руки);<br>
+-навичкам читання (вивчення букв, складів, правильна вимова звуків, формування грамотного і зв'язного мовлення);<br>
+-навичкам спілкування з однолітками і дорослими;<br>
+-розвитоку творчих здібностей (розвитоку креативного мислення та дрібної моторики руки);<br>
+-узагальнення набутих та формування нових знань;<br>
+-формуванню та корекції поведінкових навичок для легкої адаптації дитини в школі.
+                </p>
+            </div>
+          </div>
+        </div>
+
 
       </div><!--middle--> 
 
