дод ст програми

--- a/newcontacts.html
+++ b/newcontacts.html
@@ -43,11 +43,11 @@
                 </li>
                 <li><a href="./newabuot.html"><strong>Про нас</strong></a>
                 </li>
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Програми</strong><b class="caret"></b></a>
+                <li class="dropdown"><a href="./newprograms.html" class="dropdown-toggle" data-toggle="dropdown"><strong>Програми</strong><b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li ><a href="#">Підготовка до школи</a>
+                    <li ><a href="./newprograms.html">Підготовка до школи</a>
                     </li>
-                    <li><a href="#">Англійська та іспанська з іноземцями</a>
+                    <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
                     </li>
                   </ul>
                 </li>
