--- a/newprograms.html
+++ b/newprograms.html
@@ -40,19 +40,19 @@
           <div class="row">
             <div class="col-sm-12">
               <ul class="main-menu">
-                <li class="active"><a href="./index.html">
+                <li><a href="./index.html">
                   <strong>Головна</strong></a>
                 </li>
                 <li><a href="./newabuot.html">
                   <strong>Про нас</strong></a>
                 </li>
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <li class="dropdown active"><a href="./newprograms.html" class="dropdown-toggle" data-toggle="dropdown">
                   <strong>Програми</strong>
                   <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                      <li ><a href="#">Підготовка до школи</a>
+                      <li ><a href="./newprograms.html">Підготовка до школи</a>
                       </li>
-                      <li><a href="#">Англійська та іспанська з іноземцями</a>
+                      <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
                       </li>
                     </ul>
                   </li>
@@ -92,11 +92,11 @@
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 adication">
               <h2>Підготовка<br> до школи</h2>
-              <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce leo orci, tristique eget dignissim ut, porttitor eu mauris. Praesent pulvinar justo lectus, ac porttitor turpis imperdiet quis. Nunc malesuada sapien congue mattis maximus. Praesent vehicula tortor at mauris </p>
+              <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce leo orci, tristique eget dignissim ut, porttitor eu mauris. Praesent pulvinar justo lectus, ac porttitor turpis imperdiet quis. Nunc malesuada sapien congue mattis maximus. Praesent vehicula tortor at maufgdhtyewfris </p>
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 camp">
               <h2>Літній<br> табір</h2>
-              <p>Integer vel euismod velit. Integer tempus tortor quis accumsan suscipit. Phasellus convallis mauris sodales nibh rhoncus, a lacinia elit congue. Donec ut interdum ligula, quis vestibulum arcu. Proin iaculis bibendum eros ut auctor. Sed facilisis enim in risus lacinia, et sollicitudin ante sollicitudin. sdvfsdgd</p>
+              <p>Integer vel euismod velit. Integer tempus tortor quis accumsan suscipit. Phasellus convallis mauris sodales nibh rhoncus, a lacinia elit congue. Donec ut interdum ligula, quis vestibulum arcu. Proin iaculis bibendum eros ut auctor. Sed facilisis enim in risus lacinia, et sollicitudin ante sollicitufdgfdin. sdvfsdgd</p>
             </div><!--col-md-4-->
           </div><!-row-->
         </div><!--conteiner-->
