--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/new.css" rel="stylesheet" media="screen"> 
+    <link href="css/new.css" rel="stylesheet" media="screen">  
   </head>
   <body>
     <div class="wrapper">
+<!--header-->
       <header class="header">
-        <div class="container">
+        <div class="conteiner logo">
           <div class="row">
-            <div class="col-sm-7">
-<!--Головний напис-->
-              <h1 class="text-left">Домашній xристиянський</h1>
-              <h1 class="txt_napus2">садочок</h1>
-              <h1 class="txt_napus1"><strong>Посмішка</strong></h1>
-            </div> <!--col-sm-7-->                 
-            <div class="col-sm-5">
-<!--Контакти-->
+            <div class="col-xs-12 col-md-7">
+              <h1 class="text-center">Домашній xристиянський<br>
+              <small>садочок</small></h1>
+              <h1 class="text-center posmishka"><strong>посмішка</strong></h1>
+            </div><!--col-md-7-->
+            <div class="col-xs-12 col-md-5 address">
               <address>
                 <abbr title="Phone">
                   <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
@@ -29,17 +28,16 @@
                 <address>
                 <a href="mailto:#">erika.ucu@gmail.com</a>
               </address>
-            </div><!--col-sm-5-->
+            </div><!--col-md-5-->
           </div><!--row-->
-        </div><!--container-->            
-      </header>
-<!--nav-->        
-      <nav>
-        <div class="container">
+        </div><!--conteiner-->
+<!--navigation-->
+        <div class="conteiner">
           <div class="row">
-            <div class="col-sm-12">
+            <div class="col-xs-12 col-md-12">
+              <nav class="nav">
               <ul class="main-menu">
-                <li class="active"><a href="./index.html">
+                <li class="active"><a href="./1234.html">
                   <strong>Головна</strong></a>
                 </li>
                 <li><a href="./newabuot.html">
@@ -62,85 +60,32 @@
                     <strong>Контакти</strong></a>
                   </li>
                 </ul>
-              </div><!--col-sm-12-->
-            </div><!--row-->
-          </div> <!--container--> 
-<!-- Щоб створилась кнопка замість меню
-
-        <div class="btn-group">
-  <button class="btn  btn-warning">Головна</button>
-  <button class=" btn btn-warning" data-toggle="dropdown">
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><a href="#">Про нас</a></li>
-     <li><a href="#">Програми</a></li>
-      <li><a href="#">Наші вчителі</a></li>
-       <li><a href="#">Контакти</a></li>
-  </ul>
-</div>  -->
-
-      </nav>
-<!--middle-->       
+              </nav>
+            </div><!--col-md-12-->
+          </div><!--row-->
+        </div><!--conteiner-->
+      </header><!--header-->
+<!--middle-->
       <div class="middle">
-        <div class="container">
+        <div class="conteiner article">
           <div class="row">
-            <div class="col-sm-8">
+            <div class="col-xs-12 col-md-8 lessons">
               <article>
                 <img src="./images2/fotomain.png" 
                 class="img-responsive" alt="Responsive image">
-                <h3><strong>
-                  Заняття в малих групах
-                </strong></h3>
-                <p class="lessons">
+                <h3>
+                  <strong>Заняття в малих групах</strong>
+                </h3>
+                <p class="lessonsSmoll">
 Заняття в групі ранього розвитку побудовані в ігровій формі, з можливістю частої зміни діяльності дитини.Наші заняття будуть корисними не тільки дітям, але й батькам, які можуть взяти участь у розвиваючих заняттях разом з дітьми.</p>
               </article>
-              <div class="container two">
-                <div class="row">
-                  <div class="col-sm-4 ">
-                    <h2 class="text-center">
-                      <strong>Чому ми?</strong>
-                    </h2>
-                    <p class="text-left">
-Ми плекаємо в дітях християнські цінності.</p>
-                    <p class="text-left">
-В нас комфортно, весело, цікаво та захоплююче дітям.</p>
-                    <p class="text-left">
-Приємно батькам.</p>
-                  </div><!--col-sm-4-->
-                  <div class="col-sm-4 ">
-                    <h2 class="text-center ">
-                      <strong>Ми пропонуємо:</strong>
-                    </h2>
-                    <ul>
-                      <li>
-                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span> міні-садок
-                      </li>
-                      <li>
-                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span>група раннього розвитку дитини
-                      </li>
-                       <li>
-                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span>дошкільна освіту
-                      </li>
-                      <li>
-                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span>вивчення англійської мови
-                      </li>
-                      <li>
-                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span>вивчення іспанської мови
-                      </li>
-                    </ul> 
-                  </div><!--col-sm-4-->
-                  <div class="col-sm-4 ">
-                    <img src="./images2/why_animals.png"onload="var that=this;setTimeout(function(){that.style.left='45px'},1000)">
-                  </div> <!--col-sm-4-->
-                </div><!--row-->
-              </div><!--container-->
-            </div><!--col-sm-8-->
-            <div class="col-sm-4">
+            </div><!--col-md-8-->
+            <div class="col-xs-12 col-md-4 start">
+<!--aside-->
               <aside>
                 <div class="hero-unit">
                   <h1>Хороший старт<br>для ваших<br>дітей</h1>
-                  <p><a class="btn btn-warning btn-large">Дізнатись більше</a></p>
+                  <p><a class="btn btn-warning btn-large" href="./newabuot.html">Дізнатись більше</a></p>
                 </div><!--hero-unit-->
                 <div class="Misia">
                   <h3 class="text-center muted"> Місія Посмішки</h3>
@@ -163,36 +108,72 @@
 Діти навчаються у малих групах, з індивідуальним підходом, де їх приймають та заохочують.</p>
                 </div><!--dly_kogo-->
               </aside>
-            </div><!--col-sm-4-->
+            </div><!--col-md-4-->
           </div><!--row-->
-        </div><!--container-->
-      </div><!-- .middle-->
-    </div><!-- .wrapper -->
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <address><strong>Львів</strong>
-            <br>Пл. Григоренка 5/17
-            <br>9.30-15.30
-            </address>
-          </div><!--col-sm-4-->
-          <div class="col-sm-4">
-            <address>
-            <strong>(093)8397139</strong>
-            <br><a href="mailto:#">erika.ucu@gmail.com</a>
-            </address>
-          </div><!--col-sm-4-->
-          <div class="col-sm-4">
-            <address>
-            <strong>Винники</strong>
-            <br>вул. Винна гора 14/3
-            <br>10.00-18.00
-            </address>
-          </div><!--col-sm-4-->
-        </div><!--row-->
-      </div><!--container-->
-    </footer><!-- .footer -->
-    </div>
+        </div><!--conteiner-->
+<!--walk animals-->
+        <div class="conteiner three">
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              <h2 class="text-center">
+                <strong>Чому ми?</strong>
+              </h2>
+              <p class="text-left">
+Ми плекаємо в дітях християнські цінності.</p>
+              <p class="text-left">
+В нас комфортно, весело, цікаво та захоплююче дітям.</p>
+              <p class="text-left">
+Приємно батькам.</p>
+            </div><!--col-md-4-->
+            <div class="col-xs-12 col-md-4 ">
+              <h2 class="text-center ">
+                <strong>Ми пропонуємо:</strong>
+              </h2>
+              <ul>
+                <li><span class="glyphicon glyphicon-check" aria-hidden="true"></span> міні-садок
+                </li>
+                <li><span class="glyphicon glyphicon-check" aria-hidden="true"></span>група раннього розвитку дитини
+                </li>
+                <li><span class="glyphicon glyphicon-check" aria-hidden="true"></span>дошкільна освіту
+                </li>
+                <li><span class="glyphicon glyphicon-check" aria-hidden="true"></span>вивчення англійської мови
+                </li>
+                <li><span class="glyphicon glyphicon-check" aria-hidden="true"></span>вивчення іспанської мови
+                </li>
+              </ul> 
+            </div><!--col-md-4-->
+            <div class="col-xs-12 col-md-4 ">
+              <img src="./images2/why_animals.png"onload="var that=this;setTimeout(function(){that.style.left='60px'},1000)">
+            </div><!--col-md-4-->
+          </div><!--row-->
+        </div><!--conteiner-->
+      </div><!--middle-->
+<!--footer-->
+      <footer>
+         <div class="conteiner footer">
+          <div class="row">
+            <div class="col-md-4">
+              <address><strong>Львів</strong>
+                <br>Пл. Григоренка 5/17
+                <br>9.30-15.30
+              </address>
+            </div><!--col-md-4-->
+            <div class="col-md-4">
+              <address>
+                <strong>(093)8397139</strong>
+                <br><a href="mailto:#">erika.ucu@gmail.com</a>
+              </address>
+            </div><!--col-md-4-->
+            <div class="col-md-4">
+              <address>
+                <strong>Винники</strong>
+                <br>вул. Винна гора 14/3
+                <br>10.00-18.00
+              </address>
+            </div><!--col-md-4-->
+          </div><!--row-->
+        </div><!--conteiner-->
+      </footer><!--footer-->
+    </div><!--wrapper-->
   </body>
 </html>
