--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Cадочок Посмішка</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
@@ -14,12 +15,12 @@
       <header class="header">
         <div class="conteiner logo">
           <div class="row">
-            <div class="col-xs-12 col-md-7">
-              <h1 class="text-center">Домашній xристиянський<br>
-              <small>садочок</small></h1>
-              <h1 class="text-center posmishka"><strong>посмішка</strong></h1>
+            <div class="col-xs-12 col-sm-7">
+              <h1 class="text-left">Домашній xристиянський<br>
+              <small class="small">садочок</small></h1>
+              <h1 class="text-left posmishka"><strong>посмішка</strong></h1>
             </div><!--col-md-7-->
-            <div class="col-xs-12 col-md-5 address">
+            <div class="col-xs-12 col-sm-5 address1">
               <address>
                 <abbr title="Phone">
                   <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
@@ -31,39 +32,42 @@
             </div><!--col-md-5-->
           </div><!--row-->
         </div><!--conteiner-->
+        
+        
 <!--navigation-->
-        <div class="conteiner">
+        <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-12">
-              <nav class="nav">
-              <ul class="main-menu">
-                <li class="active"><a href="./1234.html">
-                  <strong>Головна</strong></a>
-                </li>
-                <li><a href="./newabuot.html">
-                  <strong>Про нас</strong></a>
-                </li>
-                <li class="dropdown"><a href="./newprograms.html" class="dropdown-toggle" data-toggle="dropdown">
-                  <strong>Програми</strong>
-                  <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li ><a href="./newprograms.html">Підготовка до школи</a>
-                      </li>
-                      <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li><a href="./newstaff.html">
-                    <strong>Наші вчителі</strong></a>
-                  </li>
-                  <li><a href="./newcontacts.html">
-                    <strong>Контакти</strong></a>
-                  </li>
-                </ul>
-              </nav>
-            </div><!--col-md-12-->
-          </div><!--row-->
-        </div><!--conteiner-->
+            <div class="col-sm-12">
+              <nav id="nav" role="navigation">
+                <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
+                  <ul class="clearfix">
+                    <li class="active"><a href="#">
+                      <strong>Головна</strong></a>
+                    </li>
+                    <li >
+                      <a href="#"><strong>Про нас</strong></a>
+                    </li>
+                    <li> <a href=""><strong><span>Програми</span></strong></a>
+                      <ul>
+                        <li><a href="">Підготовка до школи</a>
+                        </li>
+                        <li><a href="">Англійська та іспанська з іноземцями</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="#"><strong>Наші вчителі</strong></a>
+                    </li>
+                    <li>
+                      <a href=""><strong>Контакти</strong></a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div> 
+
+
       </header><!--header-->
 <!--middle-->
       <div class="middle">
@@ -114,21 +118,21 @@
 <!--walk animals-->
         <div class="conteiner three">
           <div class="row">
-            <div class="col-xs-12 col-md-4">
-              <h2 class="text-center">
+            <div class="col-xs-6 col-md-4">
+              <h1 class="text-center">
                 <strong>Чому ми?</strong>
-              </h2>
-              <p class="text-left">
+              </h1>
+              <p class="text-center">
 Ми плекаємо в дітях християнські цінності.</p>
-              <p class="text-left">
+              <p class="text-center">
 В нас комфортно, весело, цікаво та захоплююче дітям.</p>
-              <p class="text-left">
+              <p class="text-center">
 Приємно батькам.</p>
             </div><!--col-md-4-->
-            <div class="col-xs-12 col-md-4 ">
-              <h2 class="text-center ">
+            <div class="col-xs-6 col-md-4 ">
+              <h1 class="text-center ">
                 <strong>Ми пропонуємо:</strong>
-              </h2>
+              </h1>
               <ul>
                 <li><span class="glyphicon glyphicon-check" aria-hidden="true"></span> міні-садок
                 </li>
@@ -143,7 +147,7 @@
               </ul> 
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 ">
-              <img src="./images2/why_animals.png"onload="var that=this;setTimeout(function(){that.style.left='60px'},1000)">
+              <img src="./images2/whyAnimals.png"onload="var that=this;setTimeout(function(){that.style.left='60px'},1000)">
             </div><!--col-md-4-->
           </div><!--row-->
         </div><!--conteiner-->
