--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
               <nav id="nav" role="navigation">
                 <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
                   <ul class="clearfix">
-                    <li class="active"><a href="#">
+                    <li class="active"><a href="./index.html">
                       <strong>Головна</strong></a>
                     </li>
                     <li >
-                      <a href="#"><strong>Про нас</strong></a>
+                      <a href="./newabuot.html"><strong>Про нас</strong></a>
                     </li>
-                    <li> <a href=""><strong><span>Програми</span></strong></a>
+                    <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
                       <ul>
-                        <li><a href="">Підготовка до школи</a>
+                        <li><a href="./newprograms.html">Підготовка до школи</a>
                         </li>
-                        <li><a href="">Англійська та іспанська з іноземцями</a>
+                        <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
                         </li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#"><strong>Наші вчителі</strong></a>
+                      <a href="newstaff.html"><strong>Наші вчителі</strong></a>
                     </li>
                     <li>
-                      <a href=""><strong>Контакти</strong></a>
+                      <a href="./newcontacts.html"><strong>Контакти</strong></a>
                     </li>
                   </ul>
                 </nav>
