--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <h1 class="text-left posmishka"><strong>посмішка</strong></h1>
             </div><!--col-md-7-->
             <div class="col-xs-12 col-sm-5 address1">
-              <address>
+              <address class="ad1">
                 <abbr title="Phone">
                   <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
                 </abbr> (093) 839-7139 -Еріка
