--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="wrapper">
-<!--header-->
+<!--________header_______-->
       <header class="header">
         <div class="conteiner logo">
           <div class="row">
@@ -32,44 +32,48 @@
             </div><!--col-md-5-->
           </div><!--row-->
         </div><!--conteiner-->
-        
-        
-<!--navigation-->
-        <div class="container">
+
+<!--_______navigation________-->
+
+
+        <div class="conteiner">
           <div class="row">
             <div class="col-sm-12">
               <nav id="nav" role="navigation">
                 <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
-                  <ul class="clearfix">
-                    <li class="active"><a href="./index.html">
-                      <strong>Головна</strong></a>
-                    </li>
-                    <li >
-                      <a href="./newabuot.html"><strong>Про нас</strong></a>
-                    </li>
-                    <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
-                      <ul>
-                        <li><a href="./newprograms.html">Підготовка до школи</a>
-                        </li>
-                        <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a href="newstaff.html"><strong>Наші вчителі</strong></a>
-                    </li>
-                    <li>
-                      <a href="./newcontacts.html"><strong>Контакти</strong></a>
-                    </li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-          </div> 
+                <ul class="clearfix">
+                  <li class="active"><a href="./index.html">
+                    <strong>Головна</strong></a>
+                  </li>
+                  <li >
+                    <a href="./newabuot.html"><strong>Про нас</strong></a>
+                  </li>
+                  <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
+                    <ul>
+                      <li><a href="./newprograms.html">Підготовка до школи</a>
+                      </li>
+                      <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="newstaff.html"><strong>Наші вчителі</strong></a>
+                  </li>
+                  <li>
+                    <a href="./newcontacts.html"><strong>Контакти</strong></a>
+                  </li>
+                </ul>
+              </nav>
+            </div><!--col-sm-12-->
+          </div><!--row-->
+        </div><!--conteiner-->
+
+
 
 
       </header><!--header-->
-<!--middle-->
+
+<!--_________middle_________-->
       <div class="middle">
         <div class="conteiner article">
           <div class="row">
