--- a/newabuot.html
+++ b/newabuot.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Cадочок Посмішка</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
@@ -9,105 +10,97 @@
     <link href="css/newabout.css" rel="stylesheet" media="screen"> 
    </head>
    <body>
-      <div class="wrapper">
-        <header class="header">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-7">
-<!--Головний напис-->
-                 <h1 class="text-left">Домашній xристиянський</h1>
-                <h1 class="txt_napus2">садочок</h1>
-                <h1 class="txt_napus1"><strong>Посмішка</strong></h1>
-              </div>                  
-              <div class="col-sm-5">
-<!--Контакти-->
-                <address>
-                  <abbr title="Phone">
-                    <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-                  </abbr> (093) 839-7139 -Еріка
+       <div class="wrapper">
+<!--________header_______-->
+      <header class="header">
+        <div class="conteiner logo">
+          <div class="row">
+            <div class="col-xs-12 col-sm-7">
+              <h1 class="text-left">Домашній xристиянський<br>
+              <small class="small">садочок</small></h1>
+              <h1 class="text-left posmishka"><strong>посмішка</strong></h1>
+            </div><!--col-md-7-->
+            <div class="col-xs-12 col-sm-5 address1">
+              <address class="ad1">
+                <abbr title="Phone">
+                  <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+                </abbr> (093) 839-7139 -Еріка
                 </address>
                 <address>
-                  <a href="mailto:#">erika.ucu@gmail.com</a>
-                </address>
-              </div>
-            </div>
-          </div>            
-        </div>
-<!--nav-->        
-        <nav>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12">
-                <ul class="main-menu">
-                  <li >
-                    <a href="./index.html"><strong>Головна</strong></a>
+                <a href="mailto:#">erika.ucu@gmail.com</a>
+              </address>
+            </div><!--col-md-5-->
+          </div><!--row-->
+        </div><!--conteiner-->
+
+<!--_______navigation________-->
+
+
+        <div class="conteiner">
+          <div class="row">
+            <div class="col-sm-12">
+              <nav id="nav" role="navigation">
+                <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
+                <ul class="clearfix">
+                  <li class="active"><a href="./index.html">
+                    <strong>Головна</strong></a>
                   </li>
-                  <li class="active">
+                  <li >
                     <a href="./newabuot.html"><strong>Про нас</strong></a>
                   </li>
-                  <li class="dropdown">
-                    <a href="./newprograms.html" class="dropdown-toggle" data-toggle="dropdown">
-                      <strong>Програми</strong>
-                      <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                        <li ><a href="./newprograms.html">Підготовка до школи</a>
-                        </li>
-                        <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
-                        </li>
-                      </ul>
+                  <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
+                    <ul>
+                      <li><a href="./newprograms.html">Підготовка до школи</a>
+                      </li>
+                      <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
+                      </li>
+                    </ul>
                   </li>
-                  <li><a href="./newstaff.html"><strong>Наші вчителі</strong></a>
+                  <li>
+                    <a href="newstaff.html"><strong>Наші вчителі</strong></a>
                   </li>
-                  <li><a href="./newcontacts.html"><strong>Контакти</strong></a>
+                  <li>
+                    <a href="./newcontacts.html"><strong>Контакти</strong></a>
                   </li>
                 </ul>
-              </div>
-            </div>
-          </div> 
-<!-- Щоб створилась кнопка замість меню
-
-        <div class="btn-group">
-  <button class="btn  btn-warning">Головна</button>
-  <button class=" btn btn-warning" data-toggle="dropdown">
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><a href="#">Про нас</a></li>
-     <li><a href="#">Програми</a></li>
-      <li><a href="#">Наші вчителі</a></li>
-       <li><a href="#">Контакти</a></li>
-  </ul>
-</div>  -->
-      </nav>
+              </nav>
+            </div><!--col-sm-12-->
+          </div><!--row-->
+        </div><!--conteiner-->
+      </header><!--header-->
+<!--_______middle____________-->
       <div class="middle">
-        <div class="container one">
+        <div class="conteiner one">
           <div class="row">
-            <h1 class="text-center">Дещо про нас</h1>
-            <div class="col-sm-4">
+            <h2 class="text-center">Дещо про нас</h2>
+            <div class="col-xs-12 col-md-4">
               <img src="./images2/ab1.png" class="img-rounded">
-            </div><!--col-sm-5-->
-            <div class="col-sm-8">
+            </div><!--col-md-4-->
+            <div class="col-xs-12 col-md-8">
               <p>
 Ми хочемо показати дітям Божу любов через Біблійні розповіді. Створити середовище любові, де діти почуватимуться щасливо і зможуть зростати. Підготувати дітей як до школи так і до християнського дорослого життя. «Посмішка» створена для діток від 2 до 6 рочків у Львові та Винниках.</p><p> Діти навчаються у малих групах, з індивідуальним підходом, де їх приймають та заохочують. Дітей готують до школи навчаючи їх букв, цифр та хорошого ставлення до ровесників. Щоразу діти вивчатимуть Біблійну історію. Також значну частину уроку займає навчання англійської мови та іспанської мови, як частина підготовки дітей до школи та майбутньої професії.</p><p>Наша мета - знайти потаємний “ключик”, розкрити потенціал та розвинути здібності кожної дитини, адже всі ми індивідуальні. Зацікавити дитину Нам допомагають новітні ігрові методики, які сприяють засвоєнню потрібної інформації в невимушеній атмосфері. 
               </p>
-            </div><!--col-sm-7-->
+            </div><!--col-md-8-->
           </div><!--row-->
-        </div><!--container-->
-        <div class="container two">
-          <div class="row">
+        </div><!--conteiner-->
+      <div class="conteiner two">
+        <div class="row">
           <h1 class="text-center">Дещо про наші заняття</h1>
           <div class="col-xs-12 col-sm-6">
-            <div class="block"><p>1.</p></div>      
-              <p class="text">
+            <div class="block"><p>1.</p></div>
+            <p class="text">
 Для розвитку дитини дуже важливо, щоб заняття були позитивно емоційно насичені та різноманітні по своєму змісту. У нашому садочку ми намагаємося зробити навчання максимально насиченим. На занятті малюк встигає поспівати, потанцювати, розвити логіку і мову,  посидіти за столом, малюючи або конструюючи вироби, зробити зарядку, познайомитися з літерами й цифрами, зробити артикуляційну гімнастику й пограти в пальчикові ігри.Така різноманітність допомагає зробити заняття більш продуктивними. В майбутньому це приносить свої результати: діти, що відвідували садок, легше адаптуються в школі, вони більш посидючі на уроках, уважні до слів педагога.</p>
-            </div><!--col-sm-6-->
-            <div class="col-xs-12 col-sm-6">
-              <div class="block"><p>2.</p></div>
-                <p class="text">
+          </div><!--col-sm-6-->
+          <div class="col-xs-12 col-sm-6">
+            <div class="block"><p>2.</p></div>
+            <p class="text">
 Ми набираємо невеликі групи – не більше 8 дітей. Це дозволяє нам приділити максимум необхідної уваги кожній дитині. На заняттях ви знайдете друзів і однодумців, навчитесь краще розуміти своє маля, його інтереси, поведінку, потреби. Більше довідаєтесь про особливості своєї дитини й особливості дітей даного віку. Дізнаєтесь, які ігри й іграшки потрібні Вашій дитині. Навчитесь більш продуктивно й грамотно використовувати ігри й іграшки у взаємодії з дитиною поза заняттями. Подаруєте маляті й собі багато яскравих, позитивних емоцій, вражень,які стануть міцною основою для успішного всебічного раннього розвитку, що дає потужний старт дитині в житті.</p>
-              </div><!--col-sm-6-->
-            </div><!--row-->
-          </div><!--container-->
+          </div><!--col-sm-6-->
+        </div><!--row-->
+      </div><!--conteiner-->
+
+
+
           <div class="container three">
           <div class="row">
             <h1 class="text-center">Наші правила</h1>
@@ -147,31 +140,32 @@
           </div><!--row-->
         </div><!--container-->
       </div><!--middle-->
-      <footer class="footer">
-        <div class="container">
+<!--_______footer___________-->
+      <footer>
+         <div class="conteiner footer">
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-md-4">
               <address><strong>Львів</strong>
-              <br>Пл. Григоренка 5/17
-              <br>9.30-15.30
+                <br>Пл. Григоренка 5/17
+                <br>9.30-15.30
               </address>
-            </div><!--col-sm-4-->
-            <div class="col-sm-4">
+            </div><!--col-md-4-->
+            <div class="col-md-4">
               <address>
-              <strong>(093)8397139</strong>
-              <br><a href="mailto:#">erika.ucu@gmail.com</a>
+                <strong>(093)8397139</strong>
+                <br><a href="mailto:#">erika.ucu@gmail.com</a>
               </address>
-            </div><!--col-sm-4-->
-            <div class="col-sm-4">
+            </div><!--col-md-4-->
+            <div class="col-md-4">
               <address>
-              <strong>Винники</strong>
-              <br>вул. Винна гора 14/3
-              <br>10.00-18.00
+                <strong>Винники</strong>
+                <br>вул. Винна гора 14/3
+                <br>10.00-18.00
               </address>
-            </div><!--col-sm-4-->
+            </div><!--col-md-4-->
           </div><!--row-->
-        </div><!--container-->
-      </footer><!-- .footer -->
+        </div><!--conteiner-->
+      </footer><!--footer-->
     </div>
    </body>
 </html>
