додано кодування сторінок

--- a/newabuot.html
+++ b/newabuot.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Cадочок Посмішка</title>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
@@ -10,7 +10,7 @@
     <link href="css/newabout.css" rel="stylesheet" media="screen"> 
    </head>
    <body>
-       <div class="wrapper">
+    <div class="wrapper">
 <!--________header_______-->
       <header class="header">
         <div class="conteiner logo">
