нова сторінка контакти
нова сторінка контакти з меню

--- a/newcontacts.html
+++ b/newcontacts.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Cадочок Посмішка</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
@@ -10,69 +11,62 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
-         <div class="container">
+     <!--________header_______-->
+    <header class="header">
+      <div class="conteiner logo">
+        <div class="row">
+          <div class="col-xs-12 col-sm-7">
+            <h1 class="text-left">Домашній xристиянський<br>
+              <small class="small">садочок</small>
+            </h1>
+             <h1 class="text-left posmishka"><strong>посмішка</strong>
+             </h1>
+          </div><!--col-md-7-->
+          <div class="col-xs-12 col-sm-5 address1">
+             <address class="ad1">
+               <abbr title="Phone">
+                <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+              </abbr> (093) 839-7139 -Еріка
+            </address>
+            <address>
+              <a href="mailto:#">erika.ucu@gmail.com</a>
+            </address>
+          </div><!--col-md-5-->
+         </div><!--row-->
+        </div><!--conteiner-->
+<!--_______navigation________-->
+        <div class="conteiner">
           <div class="row">
-            <div class="col-sm-7">
-<!--Головний напис-->
-              <h1 class="text-left">Домашній xристиянський</h1>
-              <h1 class="txt_napus2">садочок</h1>
-              <h1 class="txt_napus1"><strong>Посмішка</strong></h1>
-            </div>                  
-            <div class="col-sm-5">
-<!--Контакти-->
-              <address>
-                <abbr title="Phone">
-                  <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-                </abbr> (093) 839-7139 -Еріка
-              </address>
-              <address>
-                <a href="mailto:#">erika.ucu@gmail.com</a>
-              </address>
-            </div>
-          </div>
-        </div>            
-      </div>
-<!--nav-->        
-      <nav>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12">
-              <ul class="main-menu">
-                <li ><a href="./index.html"><strong>Головна</strong></a>
-                </li>
-                <li><a href="./newabuot.html"><strong>Про нас</strong></a>
-                </li>
-                <li class="dropdown"><a href="./newprograms.html" class="dropdown-toggle" data-toggle="dropdown"><strong>Програми</strong><b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li ><a href="./newprograms.html">Підготовка до школи</a>
-                    </li>
-                    <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="./newstaff.html"><strong>Наші вчителі</strong></a>
-                </li>
-                <li class="active"><a href="./newcontacts.html"><strong>Контакти</strong></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div> 
-<!-- Щоб створилась кнопка замість меню
-
-        <div class="btn-group">
-  <button class="btn  btn-warning">Головна</button>
-  <button class=" btn btn-warning" data-toggle="dropdown">
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><a href="#">Про нас</a></li>
-     <li><a href="#">Програми</a></li>
-      <li><a href="#">Наші вчителі</a></li>
-       <li><a href="#">Контакти</a></li>
-  </ul>
-</div>  -->
+            <div class="col-sm-12">
+              <nav id="nav" role="navigation">
+                <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
+                <ul class="clearfix">
+                  <li><a href="./index.html">
+                    <strong>Головна</strong></a>
+                  </li>
+                  <li>
+                    <a href="./newabuot.html"><strong>Про нас</strong></a>
+                  </li>
+                  <li class="active"> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
+                    <ul>
+                      <li><a href="./newprograms.html">Підготовка до школи</a>
+                      </li>
+                      <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="newstaff.html"><strong>Наші вчителі</strong></a>
+                  </li>
+                  <li>
+                    <a href="./newcontacts.html"><strong>Контакти</strong></a>
+                  </li>
+                </ul>
+              </nav>
+            </div><!--col-sm-12-->
+          </div><!--row-->
+        </div><!--conteiner-->
+      </header><!--header-->
       </nav>
 <!--middle--> 
       <div class="middle">
@@ -90,6 +84,7 @@
             </div><!--col-sm-6-->
           </div><!--row-->
         </div><!--container -->
+
         <form>
           <h2 class="text-center">Напишіть нам...</h2>
           <div class="conteiner forma1">
@@ -158,6 +153,7 @@
           </div>
         </form>
       </div><!--middle-->
+<!--________footer__________-->
       <footer class="footer">
         <div class="container">
           <div class="row">
